fix stream swap on small sidebar bug

--- a/less/main.less
+++ b/less/main.less
@@ -72,6 +72,10 @@ header{
 
 // CONTAINER CLASSES
 
+.site-body{
+	position: relative;
+}
+
 .streamer-list{
 	//fix scrolling issue
 	position: absolute;
